# paint

./: .editorconfig  .envrc  .envrc.development  .gitignore  .prettierrc  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  docker-compose.yaml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: .gitignore  Cargo.toml  Dockerfile
api/src/: auth.rs  ebauche.rs  error.rs  instance.rs  lib.rs  main.rs  ts_definitions.rs  view.rs
api/src/cache/: error.rs  key.rs  mod.rs  policy.rs  resource.rs  sled.rs
api/src/res/: cache.rs  mod.rs
api/src/res/impls/: course.rs  mod.rs
api/src/routes/: canvas.rs  mod.rs  view.rs
api/src/routes/canvas/: assignment.rs  course.rs  mod.rs
canvas/: Cargo.toml  README.md
canvas/src/: client.rs  http.rs  lib.rs
canvas/src/resource/: announcement.rs  assignment.rs  course.rs  enrollment.rs  grading_period.rs  mod.rs  shared.rs  submission.rs  user.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: client.rs  error.rs  id.rs  lib.rs
crates/canvas/src/client/: error.rs  mod.rs  pagination.rs  request.rs  response.rs
crates/canvas/src/resource/: course.rs  enrollment.rs  misc.rs  submission.rs  user.rs
crates/ebauche/: Cargo.toml
crates/ebauche/src/: error.rs  lib.rs  view.rs
crates/ebauche/src/cache/: mod.rs  store.rs
crates/ebauche/src/cache/resource/: mod.rs
crates/fallible-stream/src/: extension.rs  flat_map.rs  lib.rs  yield_error.rs
crates/pigment/: Cargo.toml
crates/pigment/src/: lib.rs
crates/pigment/src/cache/: error.rs  key.rs  mod.rs  store.rs
crates/pigment/src/cache/resource/: course.rs  mod.rs  submission.rs
crates/pigment/src/selector/: trivial.rs
res/: .gitignore  Cargo.toml  Makefile.toml
res/proto/: pigment.proto
res/src/: client.rs  error.rs  lib.rs  message.rs  rpc.rs  view.rs
res/src/cache/: error.rs  key.rs  mod.rs  store.rs
res/src/cache/resource/: course.rs  mod.rs
res/src/cache/store/: mod.rs  sled.rs
res/src/fetch/: error.rs  mod.rs  tiered.rs
res/src/rpc/: error.rs  message.rs  mod.rs
res/src/selector/: discriminated.rs  mod.rs  trivial.rs
res/src/server/: cache.rs  fetch.rs  handler.rs  main.rs  store.rs
res/src/server/cache/: key.rs  mod.rs  view.rs
res/src/server/cache/resource/: assignment.rs  course.rs  mod.rs  submission.rs
res/src/server/fetch/: impls.rs  mod.rs
web/: .gitignore  .rsw.json  Cargo.toml  index.html  package.json  pnpm-lock.yaml  pollen.config.cjs  rollup.config.js  tsconfig.json  vite.config.js  vite.config.ts
web/public/: index.html
web/scripts/: regenerate-types.sh
web/scripts/regenerate-types/: gen-ts-definitions.js  main.sh
web/src/: App.svelte  auth.ts  env.d.ts  error.ts  error_pages.rs  lib.rs  main.ts  view.ts  vite-env.d.ts
web/src/components/: Button.svelte  Card.svelte  ErrorClear.svelte  Nav.svelte  ViewSelector.svelte
web/src/components/search/: Search.svelte
web/src/pages/: Assignment.svelte  Course.svelte  Home.svelte  NotFound.svelte  Onboard.svelte  Search.svelte  Settings.svelte
web/src/search/: Search.svelte  worker.ts
web/src/styles/: .gitignore  global.scss  typography.scss  utils.scss
web/src/templates/: index.rs
web/src/utils/: dedupe-store.ts
web/types/: .gitignore  vite-env.d.ts
