[package]
name = "oil"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "oil"
path = "src/bin/server.rs"

[[bin]]
name = "ts-definitions-oil"
path = "src/bin/ts_definitions.rs"
required-features = ["typescript-definitions"]

[dependencies]
canvas-lms = { path = "../packages/canvas-lms", features = ["client"] }
fallible-stream = { path = "../packages/fallible-stream" }
futures = "0.3"
poem = { version = "1.2", features = ["rustls"] }
poem-openapi = { version = "1.2", features = ["uuid", "rapidoc"] }
mongodb = "2.1"
sled = "0.34"
jsonwebtoken = "8.0"
serde = "1.0"
serde_json = "1.0"
bincode = "1.0"
bson = { version = "2.1", features = ["uuid-0_8"] }
uuid = "0.8"
chrono = { version = "0.4", features = ["serde"] }
heapless = "0.7"
miette = { version = "4.2", features = ["fancy"] }
thiserror = "1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dependencies.async-std]
version = "1.10"
features = ["unstable", "attributes"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.typescript-definitions]
git = "https://github.com/onelson/typescript-definitions.git"
branch = "no-debug-attrs"
optional = true