[package]
name = "oil"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "oil"
path = "src/bin/server.rs"

[[bin]]
name = "ts-definitions-oil"
path = "src/bin/ts_definitions.rs"
required-features = ["typescript-definitions"]

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
poem = { version = "1.2", features = ["rustls"] }
poem-openapi = { version = "1.2", features = ["uuid", "rapidoc"] }
hyper = { version = "0.14" }
hyper-rustls = { version = "0.23", features = ["http2"] }
mongodb = "2.1"
bson = { version = "2.1", features = ["uuid-0_8"] }
serde = "1.0"
serde_json = "1.0"
jsonwebtoken = "8.0"
uuid = "0.8"
miette = { version = "4.2", features = ["fancy"] }
thiserror = "1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.typescript-definitions]
git = "https://github.com/onelson/typescript-definitions.git"
branch = "no-debug-attrs"
optional = true