[package]
name = "pigment"
version = "0.1.0"
edition = "2021"

[features]
default = ["multi-thread"]
multi-thread = ["tokio/rt-multi-thread"]

[dependencies]
heapless = "0.7"
futures = "0.3"
pin-project = "1.0"
tokio = { version = "1.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
async-bincode = "0.6"
canvas-lms = { path = "../crates/canvas" }
hyper-tls = "0.5"
sled = { version = "0.34", optional = true }
log = "0.4"
pretty_env_logger = "0.4"
miette = { version = "3.2", features = ["fancy"] }
thiserror = "1.0"
structopt = "0.3"

[[bin]]
name = "pigment"
path = "src/server/main.rs"
required-features = ["multi-thread", "sled"]

[[bin]]
name = "cpig"
path = "src/client.rs"
