[package]
name = "ebauche"
version = "0.1.0"
edition = "2021"

[dependencies]
canvas-lms = { path = "../packages/canvas", features = ["client"] }
pigment = { path = "../packages/pigment" }
fallible-stream = { path = "../packages/fallible-stream" }
futures = "0.3"
pin-project = "1.0"
ouroboros = "0.14"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
async-bincode = "0.6"
hyper-tls = "0.5"
sled = { version = "0.34" }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
miette = { version = "3.2", features = ["fancy"] }
thiserror = "1.0"
structopt = "0.3"

[[bin]]
name = "ebauche"
path = "src/server/main.rs"

[[bin]]
name = "ebac"
path = "src/client.rs"
