[package]
name = "canvas-lms"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = "3.2"
thiserror = "1.0"

[lib]
path = "src/lib.rs"
