[package]
name = "ebauche"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7"
futures = "0.3"
pin-project = "1.0"
tokio = { version = "1.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
async-bincode = "0.6"
canvas-lms = { path = "../canvas" }
tracing = "0.1.29"
miette = { version = "3.2", features = ["fancy"] }
thiserror = "1.0"
structopt = "0.3"